fixing font issues on mobile

--- a/style.css
+++ b/style.css
@@ -105,8 +105,8 @@ body {
   cursor: pointer;
   font-family: "Libre Baskerville", serif;
   font-size: 20px;
-  font-style: italic;
-  font-weight: 700;
+  /* font-style: italic; */
+  font-weight: 400;
   padding: 13px 20px;
   background-color: #b2b2b2;
   border-radius: 8px;
@@ -180,8 +180,8 @@ body {
 .intro-text {
   font-family: "Libre Baskerville", serif;
   font-size: 28px;
-  font-weight: normal;
-  font-style: italic;
+  font-weight: 400;
+  /* font-style: italic; */
   width: 800px;
   color: white;
   opacity: 0.7;
@@ -196,7 +196,7 @@ body {
 .game-text {
   font-family: "Libre Baskerville", serif;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 400;
   font-style: italic;
   width: 82%;
   color: #f5f5dc;
